<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TabbedActivity$DummySectionFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/art" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/standort_art"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="0.40"
                    android:focusable="false"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/anredetitel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/standort_anrede"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.40"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/standort_titel"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.98"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/standort_name"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="0.40"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/fonmobil" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/standort_telefon"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.40"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/standort_mobil"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.40"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/mailfax" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/standort_email"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.40"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/standort_telefax"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.25"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/strasse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/standort_strasse"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.40"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/standort_hhnr"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.10"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/standort_hhnrzusatz"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.10"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/plzort" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/standort_plz"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.10"
                    android:text=""
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/standort_ort"
                    style="@style/EditTextStyle"
                    android:layout_weight="0.10"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/CodeFont"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/vertraege" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <NumberPicker
                    android:id="@+id/standort_numberpicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40" />

                <Button
                    android:id="@+id/standort_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/detailansicht" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>